fix(Discover): Hide duplicated catalog type filter on mobile

--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -375,4 +375,16 @@
             }
         }
     }
+
+    .selectable-inputs-modal {
+        .selectable-inputs-modal-container {
+            .selectable-inputs-modal-content {
+                .select-input {
+                    &:first-child {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
